# bigrams

./: .cruft.json  .pre-commit-config.yaml  404.html  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/: release.yml
.github/workflows/: cookiecutter.yml  docs.yml  draft_release.yml  release.yml  test.yml  versioning.py
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/bigrams/: __init__.py  bigrams.py
tests/: conftest.py  test_bigrams.py  test_dictionary.py  test_errors.py  test_no_repeat.py  test_pretty.py  test_properties.py  test_replacer.py  types.py
