[tool.poetry]
name = "bigrams"
version = "0.0.1"
description = "Simply create (N)grams"
authors = [
    "Prayson W. Daniel <praysonpi@gmail.com>",
]
license = "MIT"
readme = "README.md"

documentation = "https://proteusiq.github.io/bigrams"
homepage = "https://proteusiq.github.io/bigrams"
repository = "https://github.com/proteusiq/bigrams"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "bigrams", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
more-itertools = "^9.0.0"
cytoolz = "^0.12.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310","py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov bigrams \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 98
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
show_missing = true

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "cytoolz.*"
ignore_missing_imports = true
